# alfaraheedi

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  SECURITY.md  compose.yaml  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md
.github/workflows/: ci.yml  pages.yml  release.yml
browser-extension/: MANUAL_RELEASE_GATES.md  PRIVACY_POLICY.md  README.md  STORE_ASSETS.md  STORE_SUBMISSION.md  manifest.json  options.html  popup.html
browser-extension/src/: applySuggestion.js  background.js  content.css  content.js  editorDiscovery.js  editorSurface.js  localApi.js  options.js  overlayLayer.js  popup.js  settings.js  suggestionAnchors.js  suggestionCard.js  textProjection.js
browser-extension/tools/: package-extension.mjs
crates/write-api/: Cargo.toml
crates/write-api/src/: lib.rs  main.rs
crates/write-api/tests/: apply.rs  cors.rs  llm_status.rs  rules.rs
crates/write-arabic/: Cargo.toml
crates/write-arabic/src/: lib.rs
crates/write-arabic/tests/: rules.rs
crates/write-cli/: Cargo.toml
crates/write-cli/src/: main.rs
crates/write-cli/tests/: fix.rs  llm.rs
crates/write-core/: Cargo.toml
crates/write-core/src/: lib.rs
crates/write-core/tests/: offsets.rs  patches.rs
crates/write-english/: Cargo.toml
crates/write-english/src/: lib.rs
crates/write-english/tests/: rules.rs
crates/write-eval/: Cargo.toml
crates/write-eval/src/: lib.rs  main.rs
crates/write-eval/tests/: report.rs
crates/write-llm/: Cargo.toml
crates/write-llm/src/: lib.rs
crates/write-mixed/: Cargo.toml
crates/write-mixed/src/: lib.rs
crates/write-service/: Cargo.toml
crates/write-service/src/: lib.rs
crates/write-spell/: Cargo.toml
crates/write-spell/src/: lib.rs
crates/write-wasm/: Cargo.toml
crates/write-wasm/src/: lib.rs
datasets/eval/: known-correct.json  protected-spans.json  seed.json  v1.0-arabic.jsonl  v1.0-english.jsonl  v1.0-mixed.jsonl  v1.1-arabic.jsonl  v2-arabic.jsonl  v2-mixed.jsonl
datasets/eval/reported/: v0.4-public-safe.json  v0.5-public-safe.json
datasets/eval/rules/: punctuation.json  repeated-space.json  tatweel.json
docs/: architecture.md  evaluation.md  feedback-triage.md  local-llm.md  model-data-policy.md  privacy.md  release-checklist.md  release-signing.md  v2-grammarly-like-development-plan.md  v2-grammarly-like-execution-plan.md
docs/public/: privacy.html  privacy.md  v1.0-product-contract.md  v2-product-contract.md
docs/public/browser-extension/: privacy.html
docs/research/: v2b-desktop-overlay-spike.md
docs/security/: v1.0-privacy-review.md  v1.0-threat-model.md  v2-browser-extension-privacy-review.md  v2-browser-extension-threat-model.md
docs/superpowers/plans/: 2026-06-20-universal-writing-companion.md
docs/testing/: browser-extension-v0.7-validation.md  browser-extension-v2-validation.md  desktop-v1.0-manual-qa.md  office-addins-v0.8-validation.md  uia-v0.9-validation.md  v1.0-acceptance-matrix.md  v1.0-rc1-qa-report.md  v2-acceptance-matrix.md
docs/testing/reports/: 2026-06-18-full-app-test.md  2026-06-19-ui-integration.md  2026-06-19-v0.2.0-release.md  2026-06-19-v0.3.0-qa-quality.md  2026-06-20-v0.3.0-release-closeout.md  2026-06-21-v0.5.0-release.md  2026-06-21-v0.5.0-vm-qa.md  2026-06-21-v0.6-local-llm-companion-vm-qa.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/e2e/: workbench.spec.ts
frontend/scripts/: build-e2e.mjs
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/__tests__/: analyze.test.tsx  apiClient.test.ts  apiDown.test.tsx  apply.test.tsx  browserExtension.test.js  browserExtensionAnchoredApply.test.js  browserExtensionDiscovery.test.js  browserExtensionOverlay.test.js  browserExtensionPackage.test.js  browserExtensionProjection.test.js  browserExtensionSettings.test.js  browserExtensionSuggestionCard.test.js  companion.test.ts  companionClient.test.ts  companionLlmUi.test.tsx  feedbackReport.test.ts  feedbackReportUi.test.tsx  language.test.tsx  llm.test.tsx  officeAddinsPackage.test.js  releasePackaging.test.js  rules.test.tsx  settings.test.ts
office-addins/: MANUAL_RELEASE_GATES.md  README.md  manifest.dev.xml  manifest.prod.xml  manifest.xml  taskpane.html
office-addins/src/: localApi.js  officeApi.js  taskpane.js
office-addins/styles/: taskpane.css
office-addins/tools/: package-office-addin.mjs  serve-office-addin.mjs
scripts/: Copy-DesktopInstaller.ps1  New-OfficeAddinDevCertificate.ps1  Set-ReleaseVersion.ps1  capture-browser-extension-store-screenshots.ps1  check-browser-extension-manual-qa-report.ps1  check-browser-extension-pages-readiness.ps1  check-browser-extension-public-privacy-url.ps1  check-browser-extension-store-submission-integrity.ps1  check-desktop-installer-bundle.ps1  check-office-addins-manual-qa-report.ps1  check-public-release-hygiene.ps1  dev.ps1  export-browser-extension-release-handoff.ps1  export-browser-extension-store-submission.ps1  get-browser-extension-release-readiness.ps1  llm-serve.ps1  mock-openai-server.mjs  new-browser-extension-manual-qa-report.ps1  new-office-addins-manual-qa-report.ps1  package-browser-extension.ps1  package-office-addins.ps1  package-windows.ps1  prepare-browser-extension-release-candidate.ps1  qa-browser-extension-ax-smoke.ps1  qa-browser-extension-keyboard-flow-smoke.ps1  qa-browser-extension-production-editors-smoke.ps1  qa-desktop-overlay-whiteknight-target-matrix.ps1  qa-desktop-overlay-whiteknight.ps1  qa-office-addins-whiteknight-powerpoint-sideload.ps1  qa-office-addins-whiteknight-word-sideload.ps1  serve-office-addins.ps1  smoke-api.ps1  smoke-cli.ps1  smoke-docker.ps1  smoke-llm.ps1  validate-browser-extension-release.ps1  validate-office-addins-release.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  uia_overlay_probe.rs  uia_pilot.rs
(+22 files in other folders)
