[package]
name = "write-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
write-arabic = { path = "../write-arabic", version = "0.4.1" }
write-core = { path = "../write-core", version = "0.4.1" }
write-llm = { path = "../write-llm", version = "0.4.1" }

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true
