[package]
name = "write-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
write-arabic = { path = "../write-arabic", version = "2.0.0-rc.1" }
write-core = { path = "../write-core", version = "2.0.0-rc.1" }
write-llm = { path = "../write-llm", version = "2.0.0-rc.1" }
write-service = { path = "../write-service", version = "2.0.0-rc.1" }

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true
