[package]
name = "write-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
write-arabic = { path = "../write-arabic", version = "0.4.1" }
write-core = { path = "../write-core", version = "0.4.1" }
