[package]
name = "write-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
write-arabic = { path = "../write-arabic", version = "0.5.0" }
write-core = { path = "../write-core", version = "0.5.0" }
write-english = { path = "../write-english", version = "0.5.0" }
write-llm = { path = "../write-llm", version = "0.5.0" }
