[package]
name = "write-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
write-arabic = { path = "../write-arabic", version = "2.0.0-rc.1" }
write-core = { path = "../write-core", version = "2.0.0-rc.1" }
write-english = { path = "../write-english", version = "2.0.0-rc.1" }
write-llm = { path = "../write-llm", version = "2.0.0-rc.1" }

[dev-dependencies]
tokio.workspace = true
